2008-02-05  Mark Ellis <mark@mpellis.org.uk>

	* set password property to 'unset' if not passworded
	* fix for dbus-glib < 0.74

2008-01-25  Mark Ellis <mark@mpellis.org.uk>

	* Finish password procedures

2008-01-24  Mark Ellis <mark@mpellis.org.uk>

	* Removed possible race condition when multiple clients would request a rapi
	  connection at the same time, thanks to Guido's odccm patch

2008-01-19  Mark Ellis <mark@mpellis.org.uk>

	* Only listen for connections on interface for our
	  specified local ip

2008-01-07  Mark Ellis <mark@mpellis.org.uk>

	* Initial code
